@@ -24,9 +24,6 @@ Reusable workflow and CI/CD are not currently supported due to the management of
 ## Running
 
 ```sh
-# run jar
-java -jar fsa-reference-numbers-0.0.7.jar
-
 # run dockerfile
 docker run -it -p 8080:8080 {{ Name of outputted docker image }}
 ```
@@ -35,11 +32,8 @@ docker run -it -p 8080:8080 {{ Name of outputted docker image }}
 
 The specification requires that no two services are running with the same instance number. If you are running more than one server you can set the instance number with
 ```sh
-# jar
-java -jar target/fsa-reference-numbers-0.0.2-SNAPSHOT.jar --fsa-rn.instance=(Instance number)
-
 #docker
-docker run -it -p 8080:8080 {{ docker image }} --fsa-rn.instance=(Instance number)
+docker run -it -p 8080:8080 {{ docker image }} sh -c "/run_app.sh --fsa-rn.instance={instance number}"
 ```
 
 ### Instance number allocation
@@ -49,3 +43,9 @@ docker run -it -p 8080:8080 {{ docker image }} --fsa-rn.instance=(Instance numbe
 | Epimorphics RN service | 0-9, currently 0, 1 in use |
 | Epimorphics UV service | 10-19, currently 10 in use |
 | FSA usage | 900 - 999 |
+
+## Changelog
+
+`0.0.8`  Updated for java 21, which requires use of `--add-opens`, see bin/run_app.sh
+
+`0.0.7`  Original version deploy to FSA cluster
